/*
 * $Id: ChangeLog,v 1.2075 2004/01/16 14:45:12 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-16 11:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makallbc.bat
  * makallvc.bat
    + contrib/unicode
  * contrib/unicode/makefile.vc
    + INCLUDE_DIR

2004-01-16 09:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/common/hbver.c
  * source/pp/ppcore.c
    * cast osversionex to osversion (is winbase.h wrong?)
  * source/rtl/filesys.c
    * casts in hb_fileTrim

2004-01-16 14:15 UTC+0100 Ignacio Ortiz <iozuniga@ozs.com>
* xharbour/source/common/hbver.c
   + Added define VER_SUITE_PERSONAL
   + Added define VER_SUITE_BLADE
   + Added support for detecting Windows Server 2003.
   + Added workstation type for Windows NT 4.0, Windows 2000 Professional, and Windows XP Home Edition or Professional.
   + Added server type for Windows Server 2003, Windows 2000 and Windows NT 4.0.
* xharbour/source/pp/ppcore.c
   + Added define VER_SUITE_PERSONAL
   + Added define VER_SUITE_BLADE
   + Added support for detecting Windows Server 2003.
   + Added workstation type for Windows NT 4.0, Windows 2000 Professional, and Windows XP Home Edition or Professional.
   + Added server type for Windows Server 2003, Windows 2000 and Windows NT 4.0.
   (Credits to Pedro Gil)
 
2004-01-16 09:40 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * source/rtl/file.c
    ! hb_fsFile fix changed to use hb_Filetrim
  * source/rtl/filesys.c
    ! hb_fsOpen() and hb_fsCreate()
    + Added hb_Filetrim() function
  * source/rtl/set.c
    ! Added support to _SET_TRIMFILENAME (this set when enable (default is false),
    remove trailing blanks on the right of filename */
  * include/hbapifs.h
    ! added hb_Filetrim() prototype
  * include/hbset.h
    ! added SET_TRIMFILENAME member to hb_set
  * include/set.ch